--- a/contact-us.html
+++ b/contact-us.html
@@ -110,7 +110,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <h4>Our Location</h4>
-              <iframe width="100%" height="215" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?q=Innovation%20and%20Incubation%20Centre%2C%20Hanamkonda%2C%20Telangana%2C%20India&key=AIzaSyDnwYN-frXKxe65358EGjk-owdO9rt62ug"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3794.8867774817872!2d79.53096271429118!3d17.984003890058386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a334fbc10f30791%3A0x7df0c062f328cc66!2sInnovation+and+Incubation+Centre!5e0!3m2!1sen!2sin!4v1448099385964>" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div><!--/.col-sm-4-->
         </div>
 
